# quote-server

./: .env  Cargo.toml  LICENSE  README.md
.sqlx/: query-0a7a81830872d53a70ce5e679c7162b75532c1e560b233dd009521fcfbedad61.json  query-77ba5e6d574e615b2d788f436d04fe617043ace117e0d831f75fcd5447f84dd7.json  query-88a7ad64f661c00dd9d2140b0422d2109c8edef5ea0b2baf86d52031a3d23dea.json  query-a38521a9e38c2f6ef1034cea9e871eac127c2a1ce641660a01fc5dd4c612fe82.json  query-a824559cbdc4c6c7cdb06d0fbf6c873b1bc99f314b92dabf15e9239ff771da98.json  query-ac5216b28caef838ea195a9e45950821e71db537a55c0a8812dff685d058b9fe.json  query-b3b4031bfc7403dca54a57af0615648a64cd7f8e05e43858886b01e91ce32d83.json  query-f6b5181e4959a12830b04ba191d043e67c4574615eb1d96ed2af8f072d4ce212.json
assets/static/: quote.css  quotes.json
db/: quotes.db
leptos-frontend/: Cargo.toml  index.css  index.html
leptos-frontend/src/: main.rs  quote.rs
migrations/: 0001_create_quotes.up.sql  0001_create_quotes_table.down.sql  0001_create_quotes_table.up.sql
src/: api.rs  error.rs  main.rs  quote.rs  quote_api.rs  templates.rs  web.rs
templates/: index.html
