[package]
name = "quote-server"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = "0.8.3"
clap = {version = "4.5.39", features = ["derive"]}
fastrand = "2.3.0"
log = "0.4.27"
mime = "0.3.17"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
sqlx = {version = "0.8.5", features = ["runtime-tokio", "sqlite", "derive", "macros", "migrate", "json", "chrono"]}
serde_json = "1.0.140"
utoipa = "5.3.1"
utoipa-swagger-ui = {version = "5.0.0", features = ["axum"]}
thiserror = "2.0.12"

